# python-argufy

./: .bumpversion.cfg  .docstr.yaml  .travis.yml  404.html  CODEOWNERS  README.md  check.py  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tasks.py
.github/workflows/: ci.yml  docs.yml  documentation.yml
argufier/: __init__.py  __version__.py  argufier.py  argument.py  parser.py
argufy/: __init__.py  __version__.py  argument.py  format.py  formatter.py  parser.py
commands/: index.html
development/argument/: index.html
development/parser/: index.html
docs/: commands.md  index.md
docs/js/: refresh_on_toggle_dark_light.js  responsive_tables.js
docstrings/: index.html
example/: __main__.py  complete.py  group.py  simple.py
example/command/: __main__.py
example/commands/: __main__.py  command.py
example/multiparse/: __main__.py  cmd1.py  cmd2.py
example/subcommands/: __init__.py  __main__.py  cmd1.py  cmd2.py  config.py  subcommand.py
examples/: bool.py  complete.py  group.py  kwargs.py  simple.py
examples/commands/: __main__.py  cmd1.py  cmd2.py
examples/dataclass/: __init__.py  __main__.py  cmd.py  config.py
examples/multiparse/: __init__.py  __main__.py  cmd1.py  cmd2.py  config.py
examples/parents/: parents.py
examples/subcommands/: __main__.py  cmd1.py  cmd2.py
getting-started/: index.html
roadmap/: index.html
search/: search_index.json
src/argufy/: __init__.py  argument.py  parser.py
subcommands/: index.html
tasks/: __init__.py  build.py  doc.py  qa.py
tests/: test_argument_type_hints.py  test_arguments.py  test_cli.py  test_parser.py  test_version.py
tests/commands/: command_parser.py  test_command_parser.py
tests/docstrings/: bak_test_google.py  bak_test_restructured.py  test_google.py  test_numpy.py  test_restructured.py
tests/example/: __main__.py  example.py
tests/subcommands/: subcommands_parser.py  test_subcommands_parser.py  test_subcommands_parser.py.bak
type-hints/: index.html
